<resources>
    <string name="app_name">Back check</string>
    <string name="image_swap_content_description">Duas setas indicando mudança de moeda.</string>
    <string name="text_dollar_symbol">$</string>
    <string name="text_real_symbol">R$</string>
    <string name="text_payment_type">Tipo de pagamento</string>
    <string name="button_info_text">i</string>
    <string name="radio_button_money">Dinheiro</string>
    <string name="radio_button_credit">Débito/Crédito</string>
    <string name="text_declaration_situation">Situação da declaração</string>
    <string name="radio_button_declaration">Declarado</string>
    <string name="radio_button_not_declared">Não declarado</string>
    <string name="radio_button_fined">Multado</string>
    <string name="text_total_foreign">Total em U$</string>
    <string name="text_default_foreign_value">$ 0,00</string>
    <string name="text_total_real">Total em R$</string>
    <string name="total_default_value_total_real">R$ 0,00</string>
    <string name="button_summary">Resumo</string>
    <string name="text_button_clear">Limpar</string>
    <string name="text_price_header">Cotação</string>
    <string name="text_price_sub_header">DE () para ()</string>
    <string name="initial_value">0</string>
    <string name="text_cost_summary">Resumo dos Custos em</string>
    <string name="text_initial_value">Valor Inicial</string>
    <string name="text_total_cost">Custo Total</string>
    <string name="exchange_rate">Taxa de câmbio</string>
    <string name="text_value">Valor</string>
    <string name="text_local_currency">Moeda Local</string>
    <string name="text_warn">Alerta</string>
    <string name="text_min_value_required">Só há acréscimo se exceder em 500 o valor dos produtos.</string>
    <string name="text_information">Informação</string>
    <string name="card_payment_info">Opções relacionadas ao pagamento realizado na casa de câmbio.  Dinheiro : %  Débito/Crédito: %</string>
    <string name="text_situation_declared">Situação de Declaração (Declarado) - 50%</string>
    <string name="text_situation_not_declared">Situação de Declaração (Não declarado) - 0%</string>
    <string name="text_situation_fined">Situação de Declaração (Multado) - 100%</string>
    <string name="text_money_payment_type">Tipo de Pagamento (Dinheiro) - 1,32%</string>
    <string name="text_card_payment_type">Tipo de Pagamento (Cartão) - 6,34%</string>
</resources>
