<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/margin_default">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@drawable/bg_default"
            android:paddingTop="@dimen/margin_middle"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="3dp"
                    android:text="@string/text_price_header"
                    android:textColor="@color/titleDetail"
                    android:textSize="@dimen/font_size_large" />

                <TextView
                    android:id="@+id/labelExchangeRate"
                    android:layout_marginEnd="@dimen/margin_middle"
                    android:layout_marginRight="@dimen/margin_middle"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:text="@string/text_price_sub_header"
                    android:textSize="@dimen/font_size_medium" />
            </TableRow>

            <TableRow>

                <View />

                <TextView
                    android:id="@+id/textExchangeRate"
                    android:layout_marginEnd="@dimen/margin_middle"
                    android:layout_marginRight="@dimen/margin_middle"
                    android:gravity="end"
                    android:padding="3dp"
                    android:text="@string/initial_value"
                    android:textSize="15sp" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@drawable/bg_default"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_middle">

            <TextView
                android:id="@+id/labelTitleDetailsFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_cost_summary"
                android:textColor="@color/titleDetail"
                android:textSize="@dimen/font_size_large" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/margin_middle"
                android:background="#FF909090" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_middle"
                android:fontFamily="@font/roboto_medium"
                android:padding="3dp"
                android:text="@string/text_initial_value" />

            <TextView
                android:id="@+id/textAmountFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:gravity="end"
                android:padding="3dp"
                android:text="@string/initial_value"
                android:textSize="@dimen/font_size_xlarge" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/margin_middle"
                android:background="#FF909090" />

            <TextView
                android:id="@+id/labelPaymentTypeFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_middle"
                android:fontFamily="@font/roboto_medium"
                android:padding="3dp"
                android:text="@string/text_payment_type" />

            <TextView
                android:id="@+id/textPaymentTypeFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:gravity="end"
                android:padding="3dp"
                android:text="@string/initial_value"
                android:textSize="@dimen/font_size_xlarge" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/margin_middle"
                android:background="#FF909090" />

            <TextView
                android:id="@+id/labelSituationTypeFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_middle"
                android:fontFamily="@font/roboto_medium"
                android:padding="3dp"
                android:text="@string/text_declaration_situation" />

            <TextView
                android:id="@+id/textSituationTypeFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:gravity="end"
                android:padding="3dp"
                android:text="@string/initial_value"
                android:textSize="@dimen/font_size_xlarge" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/margin_middle"
                android:background="#FF909090" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/margin_middle"
                android:layout_marginRight="@dimen/margin_default"
                android:fontFamily="@font/roboto_medium"
                android:padding="3dp"
                android:text="@string/text_total_cost"
                android:textSize="@dimen/font_size_medium"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textTotalAmountFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:gravity="end"
                android:padding="3dp"
                android:text="@string/initial_value"
                android:textSize="@dimen/font_size_xlarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@drawable/bg_default"
            android:orientation="vertical"

            android:paddingTop="@dimen/margin_middle">

            <TextView
                android:id="@+id/labelTitleDetailsTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_cost_summary"
                android:textColor="@color/titleDetail"
                android:textSize="@dimen/font_size_large" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/margin_middle"
                android:background="#FF909090" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_middle"
                android:fontFamily="@font/roboto_medium"
                android:padding="3dp"
                android:text="@string/text_initial_value"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:id="@+id/textAmountTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:gravity="end"
                android:padding="3dp"
                android:text="@string/initial_value"
                android:textSize="@dimen/font_size_xlarge" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/margin_middle"
                android:background="#FF909090" />

            <TextView
                android:id="@+id/labelPaymentTypeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_middle"
                android:fontFamily="@font/roboto_medium"
                android:padding="3dp"
                android:text="@string/text_payment_type"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:id="@+id/textPaymentTypeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:gravity="end"
                android:padding="3dp"
                android:text="@string/initial_value"
                android:textSize="@dimen/font_size_xlarge" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/margin_middle"
                android:background="#FF909090" />

            <TextView
                android:id="@+id/labelSituationTypeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_middle"
                android:fontFamily="@font/roboto_medium"
                android:padding="3dp"
                android:text="@string/text_declaration_situation"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:id="@+id/textSituationTypeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:gravity="end"
                android:padding="3dp"
                android:text="@string/initial_value"
                android:textSize="@dimen/font_size_xlarge" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/margin_middle"
                android:background="#FF909090" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_middle"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:fontFamily="@font/roboto_medium"
                android:padding="3dp"
                android:text="@string/text_total_cost"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:id="@+id/textTotalAmountTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:gravity="end"
                android:padding="3dp"
                android:text="@string/initial_value"
                android:textSize="@dimen/font_size_xlarge" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>